--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo": "~54.0.12",
     "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.7.0",
+    "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "react": "^19.1.0",
     "react-hook-form": "^7.64.0",
