--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.27",
+    "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.2",
     "babel-preset-expo": "^54.0.3",
+    "clsx": "^2.1.1",
     "expo": "~54.0.12",
     "expo-linear-gradient": "^15.0.7",
     "expo-status-bar": "~3.0.8",
@@ -32,6 +34,7 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-toast-message": "^2.3.3",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.18",
     "zod": "^3.25.76"
   },
